welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
	var r=0;
	if (n>=21) {
		r = math.Abs(21-n)+math.Abs(21-n);
		return r;
	}
	else {
		r = math.Abs(21-n);
		return r;
	}
}
